replaced classes with hooks

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 :root {
   font: 16px / 1 sans-serif;
+  font-family: 'Overpass', sans-serif;
 }
 
 html {
@@ -9,4 +10,89 @@ html {
 body {
   margin: 0;
   min-height: 100%;
+}
+header {
+  padding: 50px;
+  margin-bottom: 50px;
+  background-image: url('images/rainbow.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+h1 {
+  display: flex;
+  justify-content: center;
+  font-size: 50px;
+  color: white;
+  margin-bottom: 1px;
+  margin-top: 40px;
+}
+h2 {
+  display: flex;
+  justify-content: center;
+}
+section {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+input {
+  cursor: pointer;
+  border: solid;
+}
+span {
+  display: flex;
+  justify-content: center;
+}
+
+button {
+  text-align: center;
+  padding: 10px;
+  cursor: pointer;
+  font-family: 'Overpass', sans-serif;
+  border-color: lightgrey;
+  border: none;
+  border: thin solid;
+  border-color: rgb(214, 213, 213);
+  border-radius: 1rem;
+}
+
+.color {
+  padding-top: 20px;
+  display: flex;
+  justify-content: center;
+  font-family: 'Varela Round', sans-serif;
+  font-family: 'Overpass', sans-serif;
+  margin-bottom: 20px;
+}
+.colorBox {
+  padding: 30px;
+  width: 70px;
+  height: 70px;
+  border-radius: 70px;
+}
+
+footer {
+  padding: 10px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100;
+  background-image: url('images/rainbow.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.5;
+}
+p {
+  color: white;
+  text-align: center;
+  font-size: 15px;
+}
+
+@media all and (max-width: 700px) {
+  footer {
+    opacity: 0.5;
+    position: static;
+  }
 }
